delete unused files

--- a/about.html
+++ b/about.html
@@ -1,125 +1,53 @@
 ---
 layout: page
-description: "Hey, this is Hux."
+title: "关于"
+description: "您好，这里是南京谷歌开发者社区。"
 header-img: "img/about-bg.jpg"
 ---
-<!-- title: "About" -->
 
-<!-- Language Selector -->
-<select onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英语 English </option>
-</select>
-
-<!-- Chinese Version -->
 <div class="zh">
     <blockquote>
-        写写代码，做做设计，看看产品。<br>
-        世界那么大，我想去看看。
+        欢迎来到南京谷歌开发者社区(Nanajing GDG) <br>
+        开放 · 分享 · 创新
     </blockquote>
 
     <p>
-    程序员，前端工程师，2015 <a href="http://m.wepiao.com/index.html">@微信电影票</a>。2014~2015 北京淘宝（<a href="http://alitrip.com" target="_blank">@阿里旅行·去啊</a>），主攻 JavaScript 全栈，其他语言玩得像样了再写上，希望成为一名<a href="http://www.zhihu.com/question/19589966/answer/12550259">产品工程师</a>
+    南京谷歌开发者社区（NanJing GDG），是一个非盈利的、自由独立的纯IT技术社区，由一群热爱分享的的开发者自发组建，线上线下交流和分享Google技术（涵盖包括Android、Chrome、GCE 等），开放技术、开源技术是社区平时最主要的活动，社区的活动经费由谷歌公司赞助。
     </p>
 
     <p>
-    设计师，UI/UX Designer，2014/2015 offered by 阿里/微软 ，动效设计师，2013 <a href="http://weibo.com/lxustudio">@LxU 工作室</a>；迷恋 OSX/iOS & Android & Windows，擅长 Layout/Typographic/Info-Arch/Usability
+    谷歌开发者社区（GDG）是 Google 公司支持并赞助的全球性非盈利性质的技术交流组织，专注于打造互联网行业从业者交流创新的平台，通过开发者自发组成社区，围绕 Google 公司在互联网领域的领先技术和资源以及其他开源开放技术平台，组织形式多样的学习、分享、交流活动，推动本地开发者创新创业。
     </p>
 
     <p>
-    热衷于各类 Web & Mobile 产品，还不算个产品设计师。<a href="http://www.zhihu.com/people/huxpro">知乎</a>用户，手机收藏癖，轻微<a href="/tags/#职业病">职业病</a>，没事也想想用户痛点、行业趋势、商业模式
+    社区活动
     </p>
-
     <p>
-    大学生，就读于中国传媒大学数字媒体艺术专业 12 级，准大四。学的东西杂七杂八，技术艺术交叉，也当过<a href="http://www.cucxsh.cn/" target="_blank">学生会</a>部长，负责些小互联网产品
+    <ul>
+    <li>Android/Web Tech Talking</li>
+    <li>Android Fundenmatal</li>
+    <li>DevFest开发者的节日</li>
+    <li>Google IO Extend直播之夜</li>
+    </ul>
     </p>
-
-    <p>人类，唱唱通俗跳跳 HipHop ，也爱好打球游泳、摄影<del>把妹</del>，没事泡泡社交网络，水水微博知乎</p>
-
-    <p>哦对了，我叫<b>黄玄</b>
-
+    
     <hr>
 
-    做过的一些东西，右转<a href="/portfolio"> Portfolio 👉 </a>
     <br>
     <br>
-    最后附上认真版的简历:
+    <p>联系我们</p>
+    <p>如果您想和我们  交流经验  或是  加入我们，  请联系我们！</p>
     <ul>
-        <li><a href="{{site.baseUrl}}/attach/2016_Hux_en_SE.pdf"> 2016_Hux_en_Sr.SE </a></li>
-        <li><a href="{{site.baseUrl}}/attach/2016_Hux_en_PD.pdf"> 2016_Hux_en_PD & UX </a></li>
+        <li><a href="mailto:nanjinggdg@gmail.com">联系邮箱 </a></li>
+        <li><a href="https://groups.google.com/forum/#!forum/nanjing-gtug">Google Group </a></li>
+        <li><a href="mailto:nanjing-gtug+subscribe@googlegroups.com">发送空邮件订阅 </a></li>
+        <li><a href="https://plus.google.com/u/0/communities/117797655100522863939">G+社区 </a></li>
+        <li><a href="http://weibo.com/u/2627645705">微博 </a></li>
+        <li><a target="_blank"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" >QQ群: 230448398</a></li>
+        <li><a >微信公众号: 南京GDG </a></li>
     </ul>
+        <img src="{{site.baseUrl}}/img/qrcode_for_gh_129cc595bd0f_430.jpg"> </img>
 </div>
-
-<!-- English Version -->
-<div class="en">
-    <blockquote>
-        Designer or Engineer, things in between.
-    </blockquote>
-
-    <p>Student, major in New Media Art of <a href="https://en.wikipedia.org/wiki/Communication_University_of_China">Communication University of China</a>, which is a interdisciplinary subject of technology and art, and now Senior.</p>
-
-    <p>Programmer, Senior Front-End Engineer of <a href="http://m.wepiao.com/index.html">Wechat Movie</a>, previous worked in <a href="http://alitrip.com" target="_blank">Alibaba Trip</a> as Front-End Engineer Intern for one year, looking for opportunities abroad.</p>
-
-    <p>Designer, offered as UI/UX Designer Intern by Alibaba Group, Microsoft Bing etc. Experienced in Motion Graphic Design, also familer with Layout and Typography.</p>
-
-    <p>Product Design and Product Management is also attractive and comfortable to me.</p>
-
-    <p>
-    You can call me English name <b>Hux</b>,<br>
-    And my Chinese name is <b>Huang Xuan</b>
-    </p>
-
-    <hr>
-    Some of my projects is put on my <a href="/portfolio"> Portfolio 👉 </a>
-    <br>
-    Interested in more details? Checkout my resumes:
-    <ul>
-        <li><a href="{{site.baseUrl}}/attach/2016_Hux_en_SE.pdf"> 2016_Hux_en_Sr.SE </a></li>
-        <li><a href="{{site.baseUrl}}/attach/2016_Hux_en_PD.pdf"> 2016_Hux_en_PD&UX </a></li>
-    </ul>
-</div>
-
-<!-- Handle Language Change -->
-<script type="text/javascript">
-    // get nodes
-    var $zh = document.querySelector(".zh");
-    var $en = document.querySelector(".en");
-    var $select = document.querySelector("select");
-
-    // bind hashchange event
-    window.addEventListener('hashchange', _render);
-
-    // handle render
-    function _render(){
-        var _hash = window.location.hash;
-        // en
-        if(_hash == "#en"){
-            $select.selectedIndex = 1;
-            $en.style.display = "block";
-            $zh.style.display = "none";
-        // zh by default
-        }else{
-            // not trigger onChange, otherwise cause a loop call.
-            $select.selectedIndex = 0;
-            $zh.style.display = "block";
-            $en.style.display = "none";
-        }
-    }
-
-    // handle select change
-    function onLanChange(index){
-        if(index == 0){
-            window.location.hash = "#zh"
-        }else{
-            window.location.hash = "#en"
-        }
-    }
-
-    // init
-    _render();
-</script>
-
-
 
 {% if site.duoshuo_username %}
 <!-- 多说评论框 start -->
@@ -136,13 +64,11 @@ header-img: "img/about-bg.jpg"
 </div>
 <!-- 多说评论框 end -->
 
-<!-- Duoshuo hacking -->
-<input id="dsUser" type="hidden" value="{{site.duoshuo_username}}"  />
-
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
     // dynamic User hacking by Hux
-    var _user = document.getElementById('dsUser').value;
+    var _user = '{{site.duoshuo_username}}';
+
     // duoshuo comment query.
     var duoshuoQuery = {short_name: _user };
     (function() {
