--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
-title: Tags
+title: 标签
 layout: default
-description: keep hungry keep foolish
+description: Stay hungry, Stay foolish!
 header-img: "img/tag-bg.jpg"
 ---
 
